@@ -38,6 +38,11 @@ proof tools.
 "exception_trace", which may be also declared within the context via
 "declare [[exception_trace = true]]".  Minor INCOMPATIBILITY.
 
+* Command 'SML_file' reads and evaluates the given Standard ML file.
+Toplevel bindings are stored within the theory context; the initial
+environment is restricted to the Standard ML implementation of
+Poly/ML, without the add-ons of Isabelle/ML.
+
 
 *** Prover IDE -- Isabelle/Scala/jEdit ***
 
